# proclib

./: README.md  notes.md  pip_installer.sh  pyproject.toml
notebooks/: .gitignore  test_contrast_model.py  test_hf_automodel.ipynb
notebooks/contrast_model_hf/: config.json  configuration_contrast.py
src/proclib/: __init__.py
